Added Queue control options. Added adminer container

--- a/nginx/php_fpm-mariadb-memcached/.env.example
+++ b/nginx/php_fpm-mariadb-memcached/.env.example
@@ -1,5 +1,8 @@
-# Relative path to your laravel codebase
+# Relative path to your laravel codebase.
+# If you put docker-compose file to root of your Laravel Application you can use default value.
 CODEBASE_PATH=.
+
+APP_ENV=local
 
 DOCKER_WEBSERVER_NAME=webserver
 DOCKER_WEBSERVER_HTTP_PORT=80
@@ -15,3 +18,5 @@ DATABASE_NAME=blog
 DATABASE_PASSWORD=password
 
 DOCKER_CACHE_NAME=cache
+
+ADMINER_PORT=8080
