--- a/apache2/mod_php-mariadb-memcached/.env.example
+++ b/apache2/mod_php-mariadb-memcached/.env.example
@@ -2,6 +2,8 @@
 # If you put docker-compose file to root of your Laravel Application you can use default value.
 CODEBASE_PATH=.
 
+APP_ENV=local
+
 DOCKER_WEBSERVER_HTTP_PORT=80
 DOCKER_WEBSERVER_HTTPS_PORT=443
 
@@ -16,3 +18,5 @@ DATABASE_NAME=blog
 DATABASE_PASSWORD=password
 
 DOCKER_CACHE_NAME=cache
+
+ADMINER_PORT=8080
