--- a/apache2/mod_php-mariadb-memcached/docker-compose.yml
+++ b/apache2/mod_php-mariadb-memcached/docker-compose.yml
@@ -42,6 +42,8 @@ services:
         image: ${DOCKER_APP_NAME}-apache2-mod_php-${PHP_VERSION}
         environment:
             CONTAINER_ROLE: queue
+            APP_ENV: ${APP_ENV:-local}
+            QUEUE: default
         volumes:
             - .docker/apache2/:/etc/apache2
             - ${CODEBASE_PATH}:/var/www/html
@@ -74,6 +76,16 @@ services:
         networks:
             - app-network
 
+    adminer:
+        image: adminer
+        container_name: ${DOCKER_DB_NAME}-adminer
+        restart: unless-stopped
+        environment:
+            ADMINER_DESIGN: haeckel
+        networks:
+            - app-network
+        ports:
+            - ${ADMINER_PORT}:8080
 networks:
   app-network:
     driver: bridge
